# video-compression-challenge

./: README.md  arithmeticcoding.py  decompress.py  pyproject.toml  shell.nix  test_compression.py  video_compression.py  video_compression_core.py
notebooks/: video-compression-new.md  video-compression-old.md  video-compression.md
