[tool.poetry]
name = "compression-challenge"
version = "0.1.0"
description = ""
authors = ["generic-github-user <40661852+generic-github-user@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
# numba = "^0.59.1"
rich = "^13.7.1"
datasets = "^2.19.1"
ipython = "^8.25.0"
ipykernel = "^6.29.4"
tqdm = "^4.66.4"
tensorflow = "^2.16.2"
# torchac = "^0.9.3"
torch = "^2.3.1"
ninja = "^1.11.1.1"
scipy = "^1.14.0"
fire = "^0.6.0"
# pybind11 = "^2.13.1"
# cython = "^3.0.10"
# gmpy2 = "^2.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
